--- a/package.json
+++ b/package.json
@@ -5,15 +5,6 @@
   "repository": "https://github.com/exoskeleton-astroboy/core.git",
   "author": "Big Mogician <bigmogician@outlook.com>",
   "license": "MIT",
-  "devDependencies": {
-    "@bigmogician/publisher": "^1.0.11",
-    "astroboy": "1.1.0-beta.4",
-    "koa": "^2.5.0",
-    "ts-node": "7.0.1",
-    "tslint": "^5.18.0",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.4.5"
-  },
   "dependencies": {
     "@bonbons/di": "1.4.1",
     "@types/camelcase": "4.1.0",
@@ -35,5 +26,14 @@
     "tsconfig-paths": "^3.7.0",
     "tslib": "^1.9.3",
     "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "@bigmogician/publisher": "^1.0.11",
+    "astroboy": "1.1.0-beta.4",
+    "koa": "^2.5.0",
+    "ts-node": "7.0.1",
+    "tslint": "^5.18.0",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "3.4.5"
   }
 }
