--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@exoskeleton/core",
-  "version": "0.0.2",
+  "version": "0.0.3-beta.1",
   "main": "src/index.ts",
   "repository": "https://github.com/exoskeleton-astroboy/core.git",
   "author": "Big Mogician <bigmogician@outlook.com>",
@@ -28,12 +28,12 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@bigmogician/publisher": "^1.0.11",
-    "astroboy": "1.1.0-beta.4",
+    "@bigmogician/publisher": "^1.0.12",
+    "astroboy": "^2.0.0",
     "koa": "^2.5.0",
     "ts-node": "7.0.1",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "3.4.5"
+    "typescript": "^3.4.5"
   }
 }
