--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@exoskeleton/core",
-  "version": "0.1.0",
+  "version": "0.1.1-beta.1",
   "main": "src/index.ts",
   "repository": "https://github.com/exoskeleton-astroboy/core.git",
   "author": "Big Mogician <bigmogician@outlook.com>",
