--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@exoskeleton/core",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "main": "src/index.ts",
   "repository": "https://github.com/exoskeleton-astroboy/core.git",
   "author": "Big Mogician <bigmogician@outlook.com>",
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@bigmogician/publisher": "^1.0.12",
-    "astroboy": "^2.0.0",
+    "astroboy": ">=2.0.0",
     "astroboy-router": "^2.2.1",
     "koa": "^2.5.0",
     "ts-node": "7.0.1",
